test/expected/declare_uv.out
declare x as unsigned void
        ^
9: error: "unsigned void" is illegal for built-in type
